--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "primeng": "^9.1.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
+        "unirest": "^0.6.0",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
