--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/router": "~8.2.14",
         "@ng-bootstrap/ng-bootstrap": "^5.3.1",
         "json-server": "^0.16.1",
+        "primeflex": "^1.3.1",
         "primeicons": "^4.0.0",
         "primeng": "^9.1.0",
         "rxjs": "~6.4.0",
